--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    <h1>Portfolio created</h1>
-    Fw22_0167
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HOME PAGE</title>
+    <link rel="stylesheet" href="./style/index.css" />
+  </head>
+  <body>
+    <nav id="nav-menu">
+      <ul>
+        <li><a class="nav-link home" href="#home">HOME</a></li>
+        <li><a class="nav-link about" href="#about">ABOUT</a></li>
+        <li><a class="nav-link skills" href="#skills">SKILLS</a></li>
+        <li><a class="nav-link projects" href="#projects">PROJECTS</a></li>
+        <li><a class="nav-link contact" href="#contact">CONTACT</a></li>
+      <li><a class="nav-link resume" href="#">RESUME</a></li>
+        </ul>
+    </nav>
+      <section id="home">
+        <h1 id="user-detail-name" >AJIT KUMAR KHATUA</h1>
+        <h2 id="user-detail-intro"> I am a full stack web Developer</h2>
+      </section>
+      <section id="about" class="about section">ABOUT</section>
+      <section id="skills">Skills</section>
+      <section id="projects">Projects</section>
+      <section id="contact">
+        <h1>Contact</h1>
+        <a id="contact-github" href="https://github.com/Ajit-kumar-khatua">GitHub</a>
+        <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/">LinkedIn</a>
+        <a id="contact-phone" href="#">Mobile</a>
+        <a id="contact-email" href="ajitkumarkhatua286@gmail.com">Email</a>
+      </section>
 </body>
 </html>
+<script></script>
