--- a/index.html
+++ b/index.html
@@ -15,23 +15,126 @@
         <li><a class="nav-link skills" href="#skills">SKILLS</a></li>
         <li><a class="nav-link projects" href="#projects">PROJECTS</a></li>
         <li><a class="nav-link contact" href="#contact">CONTACT</a></li>
-      <li><a class="nav-link resume" href="#">RESUME</a></li>
-        </ul>
+        <li><a class="nav-link resume" href="#"></a></li>
+        <a
+          id="resume-button-1"
+          onclick="window.open('./resume/Abhishek-Resume.pdf', '_blank');"
+          download=""
+          >Resume
+        </a>
+      </ul>
     </nav>
-      <section id="home">
-        <h1 id="user-detail-name" >AJIT KUMAR KHATUA</h1>
-        <h2 id="user-detail-intro"> I am a full stack web Developer</h2>
-      </section>
-      <section id="about" class="about section">ABOUT</section>
-      <section id="skills">Skills</section>
-      <section id="projects">Projects</section>
-      <section id="contact">
-        <h1>Contact</h1>
-        <a id="contact-github" href="https://github.com/Ajit-kumar-khatua">GitHub</a>
-        <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/">LinkedIn</a>
-        <a id="contact-phone" href="#">Mobile</a>
-        <a id="contact-email" href="ajitkumarkhatua286@gmail.com">Email</a>
-      </section>
-</body>
+    <!-------------------- HOME ---------------------->
+    <section id="home">
+      <img src="./src/image/Ajit.jpg" class="home-img" alt="#" />
+      <a
+        id="resume-button-2"
+        onclick="window.open('./resume/Abhishek-Resume.pdf', '_blank');"
+        download=""
+        >Resume2</a
+      >
+    </section>
+    <!-------------------- ABOUT ---------------------->
+    <section id="about" class="about section">
+      <title>About</title>
+      <h1 id="user-detail-name">AJIT KUMAR KHATUA</h1>
+      <h2 id="user-detail-intro">
+        I am a full Stack Web Developer 
+      </h2>
+    </section>
+    <!-------------------- SKILLS ---------------------->
+    <section id="skills">
+      <div class="skills-card">
+        <img
+          class="skills-card-img"
+          src=""
+          alt="nodejs.png"
+        />
+        <h5 class="skills-card-name">Node JS</h5>
+      </div>
+      <div class="skills-card">
+        <img
+          class="skills-card-img"
+          src="./image/expressjs_logo.png"
+          alt="express.png"
+        />
+        <h5 class="skills-card-name">Express JS</h5>
+      </div>
+      <div class="skills-card">
+        <img
+          class="skills-card-img"
+          src="./image/mongoDB_logo.png"
+          alt="mongodb.png"
+        />
+        <h5 class="skills-card-name">Mongo DB</h5>
+      </div>
+    </section>
+    <!-------------------- PROJECTS ---------------------->
+    <section id="projects">
+      <!-- 1 -->
+      <div class="project-card">
+        <img src="./src/image/Baby's Fashion.png" alt="">
+        <title class="project-title">Baby's Fashion</title>
+        <p class="project-description">Description</p>
+        <p class="project-tech-stack">Tech Stack</p>
+        <a class="project-github-link" href="https://github.com/Ajit-kumar-khatua/industrious-steam-9257">GitHub</a>
+        <a class="project-deployed-link"href="https://babysfashion.netlify.app/">Netlify</a>
+      </div>
+      <!-- 2 -->
+      <div class="project-card">
+        <img src="./src//image/MY tv.png" alt="">
+        <title class="project-title">MyTv</title>
+        <p class="project-description">Description</p>
+        <p class="project-tech-stack">Tech Stack</p>
+        <a class="project-github-link" href="https://github.com/abhishek1494k/brainy-sidewalk-2900">GitHub</a>
+        <a class="project-deployed-link"href="https://mytv-com.netlify.app/">Netlify</a>
+      </div>
+      <!-- 3 -->
+      <div class="project-card">
+        <img src="./src/image/Happy buy.png" alt="">
+        <title class="project-title">Happy Buy</title>
+        <p class="project-description">Description</p>
+        <p class="project-tech-stack">Tech Stack</p>
+        <a class="project-github-link" href="https://github.com/Ajit-kumar-khatua/known-team-2224">GitHub</a>
+        <a class="project-deployed-link"href="https://happybuy.netlify.app/">Netlify</a>
+      </div>
+    </section>
+    <!-------------------- CONTACTS ---------------------->
+    <section id="contact">
+      <h1>Contact</h1>
+      <a id="contact-github" href="https://github.com/Ajit-kumar-khatua">GitHub</a>
+      <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/"
+        >LinkedIn</a
+      >
+      <a id="contact-phone" href="#">Mobile</a>
+      <a id="contact-email" href="ajitkumarkhatua286@gmail.com">Email</a>
+    </section>
+    <!-------------------- RESUME ---------------------->
+    <section id="resume"></section>
+    <!-------------------- GitHUB ---------------------->
+    <section class="react-activity-calendar">
+      <h1>GitHub React-Activity-Calendar</h1>
+      <img
+        id="github-streak-stats"
+        src="https://github-readme-streak-stats.herokuapp.com/?user=ajit-kumar-khatua&"
+        alt="streakstat"
+      />
+      <img
+        id="github-top-langs"
+        src="https://github-readme-stats.vercel.app/api/top-langs?username=ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
+        alt="top_languages"
+      />
+      <img
+        id="github-stats-card"
+        src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en"
+        alt="stat-card"
+      />
+      <img
+      id="github-stats-card"
+      src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en%22%20alt=%22ajit-kumar-khatua"
+      alt="stat-card"
+    />
+    <!-- [![willianrod's wakatime stats](https://github-readme-stats.vercel.app/api/wakatime?username=willianrod)](https://github.com/anuraghazra/github-readme-stats) -->
+    </section>
+  </body>
 </html>
-<script></script>
