Project section added

--- a/index.html
+++ b/index.html
@@ -138,33 +138,57 @@
   </section>
   <!-------------------- PROJECTS ---------------------->
   <section id="projects">
+    <h1 id="my-projects">Projects</h1>
+    <div id="project-child1">
     <!-- 1 -->
     <div class="project-card">
-      <!-- <img src="./src/image/Baby's Fashion.png" alt=""> -->
-      <title class="project-title">Baby's Fashion</title>
-      <p class="project-description">Description</p>
-      <p class="project-tech-stack">Tech Stack</p>
-      <a class="project-github-link" href="https://github.com/Ajit-kumar-khatua/industrious-steam-9257">GitHub</a>
-      <a class="project-deployed-link" href="https://babysfashion.netlify.app/">Netlify</a>
+      <img src="./src/image/Baby's Fashion.png" alt="">
+      <h2 class="project-title">Baby's Fashion</h2>
+      <br>
+      <p class="project-description">It is an E-commerce website selling all baby fashion related products in the year range of 0 to 12 years.  It is clone of <a href="https://www.carters.com/" target="_blank">carters.com</a></p>
+       <br>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
+      <br>     
+      <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/industrious-steam-9257" target="_blank" >GitHub</a></button>      
+      <button class="project-deployed-link"><a href="https://babysfashion.netlify.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 2 -->
     <div class="project-card">
-      <!-- <img src="./src//image/MY tv.png" alt=""> -->
-      <title class="project-title">MyTv</title>
-      <p class="project-description">Description</p>
-      <p class="project-tech-stack">Tech Stack</p>
-      <a class="project-github-link" href="https://github.com/abhishek1494k/brainy-sidewalk-2900">GitHub</a>
-      <a class="project-deployed-link" href="https://mytv-com.netlify.app/">Netlify</a>
+      <img src="./src//image/MY tv.png" alt="">
+      <h2 class="project-title">MyTv</h2>
+      <br>
+      <p class="project-description">It is an OTT platform and clone of <a href="https://tv.apple.com/" target="_blank">Apple Tv</a>.Anyone can see any top-rating movies or serials after taking subscriptions to our websites. </p>
+      <br>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
+      <br>
+      <button class="project-github-link"><a href="https://github.com/abhishek1494k/brainy-sidewalk-2900" target="_blank">GitHub</a></button>
+      <button class="project-deployed-link"><a href="https://mytv-com.netlify.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 3 -->
     <div class="project-card">
-      <!-- <img src="./src/image/Happy buy.png" alt=""> -->
-      <title class="project-title">Happy Buy</title>
-      <p class="project-description">Description</p>
-      <p class="project-tech-stack">Tech Stack</p>
-      <a class="project-github-link" href="https://github.com/Ajit-kumar-khatua/known-team-2224">GitHub</a>
-      <a class="project-deployed-link" href="https://happybuy.netlify.app/">Netlify</a>
+      <img src="./src/image/Happy buy.png" alt="">
+      <h2 class="project-title">Happy Buy</h2>
+      <br>
+      <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
+      <br>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
+      <br>
+      <button class="project-github-link"><a  href="https://github.com/Ajit-kumar-khatua/known-team-2224" target="_blank">GitHub</a></button>
+      <button class="project-deployed-link"><a  href="https://happybuy.netlify.app/" target="_blank">Netlify</a></button>
     </div>
+    <!-- 4 -->
+    <div class="project-card">
+      <img src="./src/image/Happy buy.png" alt="">
+      <h2 class="project-title">Happy Buy</h2>
+      <br>
+      <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
+      <br>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
+      <br>
+      <button class="project-github-link"><a  href="https://github.com/Ajit-kumar-khatua/known-team-2224" target="_blank">GitHub</a></button>
+      <button class="project-deployed-link"><a  href="https://happybuy.netlify.app/" target="_blank">Netlify</a></button>
+    </div>
+     </div>
   </section>
   <!-------------------- CONTACTS ---------------------->
   <section id="contact">
