--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
     <div class="project-card">
       <img src="./src/image/Baby's Fashion.png" alt="">
       <h2 class="project-title">Baby's Fashion</h2>
-      <br>
+      <!-- <br> -->
       <p class="project-description">It is an E-commerce website selling all baby fashion related products in the year range of 0 to 12 years.  It is clone of <a href="https://www.carters.com/" target="_blank">carters.com</a></p>
-       <br>
+       <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
-      <br>     
+      <!-- <br>      -->
       <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/industrious-steam-9257" target="_blank" >GitHub</a></button>      
       <button class="project-deployed-link"><a href="https://babysfashion.netlify.app/" target="_blank">Netlify</a></button>
     </div>
@@ -156,11 +156,11 @@
     <div class="project-card">
       <img src="./src//image/MY tv.png" alt="">
       <h2 class="project-title">MyTv</h2>
-      <br>
+      <!-- <br> -->
       <p class="project-description">It is an OTT platform and clone of <a href="https://tv.apple.com/" target="_blank">Apple Tv</a>.Anyone can see any top-rating movies or serials after taking subscriptions to our websites. </p>
-      <br>
+      <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
-      <br>
+      <!-- <br> -->
       <button class="project-github-link"><a href="https://github.com/abhishek1494k/brainy-sidewalk-2900" target="_blank">GitHub</a></button>
       <button class="project-deployed-link"><a href="https://mytv-com.netlify.app/" target="_blank">Netlify</a></button>
     </div>
@@ -168,11 +168,11 @@
     <div class="project-card">
       <img src="./src/image/Happy buy.png" alt="">
       <h2 class="project-title">Happy Buy</h2>
-      <br>
+      <!-- <br> -->
       <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
-      <br>
+      <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
-      <br>
+      <!-- <br> -->
       <button class="project-github-link"><a  href="https://github.com/Ajit-kumar-khatua/known-team-2224" target="_blank">GitHub</a></button>
       <button class="project-deployed-link"><a  href="https://happybuy.netlify.app/" target="_blank">Netlify</a></button>
     </div>
@@ -180,42 +180,48 @@
     <div class="project-card">
       <img src="./src/image/Happy buy.png" alt="">
       <h2 class="project-title">Happy Buy</h2>
-      <br>
+      <!-- <br> -->
       <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
-      <br>
+      <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
-      <br>
+      <!-- <br> -->
       <button class="project-github-link"><a  href="https://github.com/Ajit-kumar-khatua/known-team-2224" target="_blank">GitHub</a></button>
       <button class="project-deployed-link"><a  href="https://happybuy.netlify.app/" target="_blank">Netlify</a></button>
     </div>
      </div>
   </section>
-  <!-------------------- CONTACTS ---------------------->
-  <section id="contact">
-    <h1>Contact</h1>
-    <a id="contact-github" href="https://github.com/Ajit-kumar-khatua">GitHub</a>
-    <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/">LinkedIn</a>
-    <a id="contact-phone" href="#">Mobile</a>
-    <a id="contact-email" href="ajitkumarkhatua286@gmail.com">Email</a>
-  </section>
-  <!-------------------- RESUME ---------------------->
-  <section id="resume"></section>
+ 
+  <!-- ------------------ RESUME -------------------- -->
+  <!-- <section id="resume"></section> -->
   <!-------------------- GitHUB ---------------------->
   <section class="react-activity-calendar">
-    <h1>GitHub React-Activity-Calendar</h1>
+    <h1 id="github-status">Github Status</h1>
+    <h1 id="github-heading">GitHub Activity-Calendar</h1>
+    <img id="github-contribution" src="./src/image/github contribution.png" alt="">
+    <br>
     <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=ajit-kumar-khatua&"
       alt="streakstat" />
-    <img id="github-top-langs"
-      src="https://github-readme-stats.vercel.app/api/top-langs?username=ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
-      alt="top_languages" />
     <img id="github-stats-card"
       src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en"
       alt="stat-card" />
-    <img id="github-stats-card"
+      <br>
+      <img id="github-top-langs"
+      src="https://github-readme-stats.vercel.app/api/top-langs?username=ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
+      alt="top_languages" />
+    <!-- <img id="github-stats-card"
       src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en%22%20alt=%22ajit-kumar-khatua"
-      alt="stat-card" />
+      alt="stat-card" /> -->
     <!-- [![willianrod's wakatime stats](https://github-readme-stats.vercel.app/api/wakatime?username=willianrod)](https://github.com/anuraghazra/github-readme-stats) -->
   </section>
+
+ <!-------------------- CONTACTS ---------------------->
+ <section id="contact">
+  <h1>Contact</h1>
+  <a id="contact-github" href="https://github.com/Ajit-kumar-khatua">GitHub</a>
+  <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/">LinkedIn</a>
+  <a id="contact-phone" href="#">Mobile</a>
+  <a id="contact-email" href="ajitkumarkhatua286@gmail.com">Email</a>
+</section>
 </body>
 
 </html>
