Resume button added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="nav-link projects" href="#projects">PROJECTS</a>
       <a class="nav-link contact" href="#contact">CONTACT</a>
       <!-- <a class="nav-link resume" href="#"></a> -->
-      <a id="resume-button-1" onclick="window.open('./resume/Abhishek-Resume.pdf', '_blank');" download="">Resume
+      <a id="resume-button-1" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
       </a>
     </div>
 
@@ -38,7 +38,7 @@
         <a href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215" target="_blank"><img
             src="./src/image/linkedin logo.png" alt=""></a>
       </div>
-      <button id="resume-btn">Resume</button>
+      <button id="resume-button-2"><a href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume</a></button>
     </div>
     <div>
       <img src="./src/image/imageedit_1_5029899168.png" class="home-img" alt="#" />
