--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
       <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
       </a>
     </div>
+    <div id="hamberger-icon" onclick="toggleMobileMenu(this)">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+       <ul class="mobile-menu">
+        <a class="nav-link home" href="#home">HOME</a>
+        <a class="nav-link about" href="#about">ABOUT</a>
+        <a class="nav-link skills" href="#skills">SKILLS</a>
+        <a class="nav-link projects" href="#projects">PROJECTS</a>
+        <a class="nav-link contact" href="#contact">CONTACT</a>
+        <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
+        </a>
+       </ul>
+
+    </div>
 
   </nav>
   <!-------------------- HOME ---------------------->
@@ -116,25 +131,25 @@
   </div>
   </section>
 
-  <section id="skills">
+  <section id="tools">
     <h1 id="my-tools">Tools</h1>
-    <div id="skill-child1">
+    <div id="tools-child1">
    
-    <div class="skills-card">
-      <img class="skills-card-img" src="./src/image/aws.png" alt="nodejs.png" />
-      <h5 class="skills-card-name">AWS</h5>
+    <div class="tools-card">
+      <img class="tools-card-img" src="./src/image/aws.png" alt="nodejs.png" />
+      <h5 class="tools-card-name">AWS</h5>
     </div>
-    <div class="skills-card">
-      <img class="skills-card-img" src="./src/image/cypress.webp" alt="express.png" />
-      <h5 class="skills-card-name">Cypress</h5>
+    <div class="tools-card">
+      <img class="tools-card-img" src="./src/image/cypress.webp" alt="express.png" />
+      <h5 class="tools-card-name">Cypress</h5>
     </div>
-    <div class="skills-card">
-      <img class="skills-card-img" src="./src/image/postman-icon.webp" alt="mongodb.png" />
-      <h5 class="skills-card-name">Postman</h5>
+    <div class="tools-card">
+      <img class="tools-card-img" src="./src/image/postman-icon.webp" alt="mongodb.png" />
+      <h5 class="tools-card-name">Postman</h5>
     </div>
-    <div class="skills-card">
-      <img class="skills-card-img" src="./src/image/GitHub.png" alt="socket" />
-      <h5 class="skills-card-name">Github</h5>
+    <div class="tools-card">
+      <img class="tools-card-img" src="./src/image/GitHub.png" alt="socket" />
+      <h5 class="tools-card-name">Github</h5>
     </div>
   </div>
   </section>
@@ -247,5 +262,6 @@
   </div>
 </section>
 </body>
+   <script src="./index.js"></script>
 
 </html>
