--- a/index.html
+++ b/index.html
@@ -17,16 +17,24 @@
       <a href="#">AJIT</Ajit></a>
     </div>
     <div id="child2">
-      <a class="nav-link home" href="#home">HOME</a>
-      <a class="nav-link about" href="#about">ABOUT</a>
-      <a class="nav-link skills" href="#skills">SKILLS</a>
-      <a class="nav-link projects" href="#projects">PROJECTS</a>
-      <a class="nav-link contact" href="#contact">CONTACT</a>
-      <!-- <a class="nav-link resume" href="#"></a> -->
-      <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
-      </a>
+     
+      <div id="hamberger-icon" onclick="toggleMobileMenu(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <ul class="mobile-menu">
+        <a class="nav-link home" href="#home">HOME</a>
+        <a class="nav-link about" href="#about">ABOUT</a>
+        <a class="nav-link skills" href="#skills">SKILLS</a>
+        <a class="nav-link projects" href="#projects">PROJECTS</a>
+        <a class="nav-link contact" href="#contact">CONTACT</a>
+        <!-- <a class="nav-link resume" href="#"></a> -->
+        <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
+        </a>
+      </ul>
     </div>
-    <div id="hamberger-icon" onclick="toggleMobileMenu(this)">
+    </div>
+    <!-- <div id="hamberger-icon" onclick="toggleMobileMenu(this)">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
@@ -40,7 +48,7 @@
         </a>
        </ul>
 
-    </div>
+    </div> -->
 
   </nav>
   <!-------------------- HOME ---------------------->
