--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215" target="_blank"><img
             src="./src/image/linkedin logo.png" alt=""></a>
       </div>
-      <button id="resume-button-2"><a href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume</a></button>
+      <button id="resume-button-2"><a id="resume-link-2" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="Ajit_Khatua_Resume">Resume</a></button>
     </div>
     <div>
       <img src="./src/image/imageedit_1_5029899168.png" class="home-img" alt="#" />
