--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav id="nav-menu">
     <div id="child1">
-      <a href="#">AJIT</Ajit></a>
+      <a href="#">AJIT KHATUA</a>
     </div>
     <div id="child2">
      
@@ -29,7 +29,7 @@
         <a class="nav-link projects" href="#projects">PROJECTS</a>
         <a class="nav-link contact" href="#contact">CONTACT</a>
         <!-- <a class="nav-link resume" href="#"></a> -->
-        <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">Resume
+        <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">RESUME
         </a>
       </ul>
     </div>
