--- a/index.html
+++ b/index.html
@@ -218,15 +218,15 @@
     <h1 id="github-heading">GitHub Activity-Calendar</h1>
     <img id="github-contribution" src="./src/image/github contribution.png" alt="">
     <br>
-    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=ajit-kumar-khatua&"
+    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Ajit-kumar-khatua&"
       alt="streakstat" />
 
     <img id="github-stats-card"
-      src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en"
+      src="https://github-readme-stats.vercel.app/api?username=Ajit-kumar-khatua&show_icons=true&locale=en"
       alt="stat-card" />
       <br>
       <img id="github-top-langs"
-      src="https://github-readme-stats.vercel.app/api/top-langs/?username=ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
+      src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
       alt="top_languages" />
     <!-- <img id="github-stats-card"
       src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en%22%20alt=%22ajit-kumar-khatua"
