--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
         <a class="nav-link projects" href="#projects">PROJECTS</a>
         <a class="nav-link contact" href="#contact">CONTACT</a>
         <!-- <a class="nav-link resume" href="#"></a> -->
-        <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">RESUME
+        <!-- <a id="resume-button-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="">RESUME -->
         </a>
+        <li id="resume-button-1">
+          <a id="resume-link-1" class="nav-link resume" href="./src/Resume/Ajit_Khatua_Resume.pdf"  download="Ajit_Khatua_Resume">RESUME
+          </a>
+        </li>
+       
       </ul>
     </div>
     </div>
@@ -63,7 +68,7 @@
         <a href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215" target="_blank"><img
             src="./src/image/linkedin logo.png" alt=""></a>
       </div>
-      <button id="resume-button-2"><a id="resume-link-2" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank" download="Ajit_Khatua_Resume">Resume</a></button>
+      <button id="resume-button-2"><a id="resume-link-2" href="./src/Resume/Ajit_Khatua_Resume.pdf"  download="Ajit_Khatua_Resume">Resume</a></button>
     </div>
     <div>
       <img src="./src/image/imageedit_1_5029899168.png" class="home-img" alt="#" />
