--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     <h1 id="github-heading">GitHub Activity-Calendar</h1>
     <img id="github-contribution" src="./src/image/github contribution.png" alt="">
     <br>
-    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Ajit-kumar-khatua&"
+    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Ajit-kumar-khatua"
       alt="streakstat" />
 
     <img id="github-stats-card"
