--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h1 id="about-me">About</h1>
     <div id="about-details">
       <div>
-        <img src="./src/image/web dev2.png" alt="">
+        <img src="https://cdn.dribbble.com/users/1162077/screenshots/3848914/programmer.gif" alt="">
       </div>
       <div id="about-details-child2">
         <h1 id="user-detail-name">I'm Ajit kumar khatua</h1>
@@ -177,15 +177,15 @@
     </div>
     <!-- 2 -->
     <div class="project-card">
-      <img src="./src//image/MY tv.png" alt="">
-      <h2 class="project-title">MyTv</h2>
+      <img src="./src/image/Home Page.png" alt="">
+      <h2 class="project-title">Easy Poll</h2>
       <!-- <br> -->
-      <p class="project-description">It is an OTT platform and clone of <a href="https://tv.apple.com/" target="_blank">Apple Tv</a>.Anyone can see any top-rating movies or serials after taking subscriptions to our websites. </p>
+      <p class="project-description">It is a platform where a user can take responses in real time and it is a clone of <a href="https://www.slido.com/" target="_blank">Slido.com</a>. </p>
       <!-- <br> -->
-      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB,Web Soket</p>
       <!-- <br> -->
-      <button class="project-github-link"><a href="https://github.com/abhishek1494k/brainy-sidewalk-2900" target="_blank">GitHub</a></button>
-      <button class="project-deployed-link"><a href="https://mytv-com.netlify.app/" target="_blank">Netlify</a></button>
+      <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/thriving-shock-8502" target="_blank">GitHub</a></button>
+      <button class="project-deployed-link"><a href="https://polleasy231.netlify.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 3 -->
     <div class="project-card">
@@ -201,15 +201,15 @@
     </div>
     <!-- 4 -->
     <div class="project-card">
-      <img src="./src/image/Happy buy.png" alt="">
-      <h2 class="project-title">Happy Buy</h2>
+      <img src="./src//image/MY tv.png" alt="">
+      <h2 class="project-title">MyTv</h2>
       <!-- <br> -->
-      <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
+      <p class="project-description">It is an OTT platform and clone of <a href="https://tv.apple.com/" target="_blank">Apple Tv</a>.Anyone can see any top-rating movies or serials after taking subscriptions to our websites. </p>
       <!-- <br> -->
-      <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript</p>
       <!-- <br> -->
-      <button class="project-github-link"><a  href="https://github.com/Ajit-kumar-khatua/known-team-2224" target="_blank">GitHub</a></button>
-      <button class="project-deployed-link"><a  href="https://happybuy.netlify.app/" target="_blank">Netlify</a></button>
+      <button class="project-github-link"><a href="https://github.com/abhishek1494k/brainy-sidewalk-2900" target="_blank">GitHub</a></button>
+      <button class="project-deployed-link"><a href="https://mytv-com.netlify.app/" target="_blank">Netlify</a></button>
     </div>
      </div>
   </section>
@@ -220,7 +220,7 @@
   <section class="react-activity-calendar">
     <h1 id="github-status">Github Status</h1>
     <h1 id="github-heading">GitHub Activity-Calendar</h1>
-    <img id="github-contribution" src="./src/image/github contribution.png" alt="">
+    <img id="github-contribution" src="./src/image/github stats.png" alt="">
     <br>
     <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Ajit-kumar-khatua"
       alt="streakstat" />
